--- a/style.css
+++ b/style.css
@@ -21,26 +21,26 @@ header {
   padding: 10px 20px;
 }
 
-header nav {
+header > nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
 }
 
-header nav ul {
+header > nav > ul {
   list-style: none;
   display: flex;
   gap: 40px;
 }
 
-header nav ul li a {
+header > nav > ul > li > a {
   color: white;
   text-decoration: none;
   font-weight: bold;
 }
 
-header nav ul li a:hover {
+header > nav > ul > li > a:hover {
   text-decoration: underline;
 }
 
@@ -109,7 +109,7 @@ footer {
   text-align: center;
 }
 
-footer ul {
+footer > ul {
   list-style: none;
   display: flex;
   justify-content: center;
@@ -117,12 +117,12 @@ footer ul {
   padding: 10px;
 }
 
-footer ul li a {
+footer > ul > li > a {
   color: white;
   text-decoration: none;
 }
 
-footer ul li a:hover {
+footer > ul > li > a:hover {
   text-decoration: underline;
 }
 
@@ -143,7 +143,7 @@ footer ul li a:hover {
 }
 
 @media (max-width: 767px) {
-  footer ul {
+  footer > ul {
     flex-direction: column;
     gap: 10px;
   }
